# motion_detector

./: Cargo.toml  GUI_TEST_REPORT.md  README.md  test_app.sh
src/: gui.rs  gui_test.rs  gui_test_full.rs  main.rs  tests.rs  working_gui.rs
