[package]
name = "motion_detector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "motion_detector"
path = "src/main.rs"

[[bin]]
name = "gui_test"
path = "src/gui_test.rs"

[[bin]]
name = "gui_test_full"
path = "src/gui_test_full.rs"

[[bin]]
name = "working_gui"
path = "src/working_gui.rs"

[dependencies]
opencv = "0.98"
rscam = "0.5"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
eframe = "0.27"
egui = "0.27"
crossbeam-channel = "0.5"
